Fixed section overflow

--- a/client/src/components/Section/_section.scss
+++ b/client/src/components/Section/_section.scss
@@ -8,5 +8,6 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 62vh;
+    overflow: auto;
 }
